# plc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TEST_RESULTS.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
docs/: fbd-implementation-plan.md
iec61131/: CHANGELOG.md  Cargo.toml  README.md  build.rs
iec61131/src/: lib.rs
iec61131/src/analysis/: cfg.rs  mod.rs  nesting.rs
iec61131/tests/: complex_st_test.rs  integration_tests.rs  lexer_tests.rs
iecst/: CHANGELOG.md  Cargo.toml  README.md
iecst/docs/: SECURITY_STATUS.md
iecst/examples/: test_corpus.rs
iecst/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  security.rs  span.rs
iecst/src/analysis/: cfg.rs  code_smells.rs  diagnostics.rs  mod.rs  nesting.rs  symbol_table.rs  type_check.rs
iectypes/: Cargo.toml  README.md
iectypes/src/: data_types.rs  keywords.rs  lib.rs  literals.rs
l5x/: CHANGELOG.md  Cargo.toml  README.md
l5x/examples/: test_corpus.rs
l5x/src/: analysis.rs  lib.rs  security.rs  to_model.rs
l5x/src/rll/: ast.rs  error.rs  mod.rs  operand.rs  parser.rs
plc/src/: security.rs
plceye/: CHANGELOG.md  Cargo.toml  README.md
plceye/examples/: test_fbd_analysis.rs  test_graphical_languages.rs  test_st_il_extraction.rs
plceye/src/: config.rs  detector.rs  error.rs  lib.rs  loader.rs  main.rs  report.rs
plceye/src/analysis/: iec61131_adapter.rs  l5x_analysis.rs  mod.rs  model_analysis.rs  plcopen_analysis.rs  rll_parsing.rs  st_parsing.rs
plceye/src/rules/: complexity.rs  empty_routines.rs  mod.rs  nesting.rs  plcopen_rules.rs  undefined_tags.rs  unused_aois.rs  unused_datatypes.rs  unused_tags.rs
plceye/src/smells/: empty_routines.rs  mod.rs  model_smells.rs  plcopen_smells.rs  undefined_tags.rs  unused_tags.rs
plcmodel/: Cargo.toml  README.md
plcmodel/src/: body.rs  data_type.rs  lib.rs  pou.rs  project.rs  task.rs  variable.rs
plcmodel/src/analysis/: stats.rs  xref.rs
plcmodel/tests/: model_tests.rs
plcopen/: CHANGELOG.md  Cargo.toml  README.md
plcopen/examples/: test_fbd_parsing.rs
plcopen/src/: lib.rs  security.rs  st.rs  to_model.rs
plcscl/: CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.1.0.md  test_corpus.rs
plcscl/examples/: parse_file.rs  parse_scl.rs  parser_tests.rs  security_test.rs  simple_parse.rs  test_corpus.rs
plcscl/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  security.rs  span.rs
plcscl/src/parser/: blocks.rs  expressions.rs  statements.rs  types.rs  variables.rs
plcscl/test/: complex.scl
plcscl/tests/: error_recovery.rs
plcviz/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
plcviz/src/: config.rs  lib.rs  main.rs  plcopen_graph.rs
plcviz/src/analysis/: mod.rs
plcviz/src/graph/: l5x_graph.rs  mod.rs  renderer.rs  types.rs
plcviz/src/layout/: grid.rs  hierarchical.rs  mod.rs
plcviz/src/output/: builder.rs  elements.rs  mod.rs  style.rs
plcviz/src/svg/: builder.rs  elements.rs  mod.rs  style.rs
release/: CHANGELOG.md
