[workspace]
resolver = "2"
members = [
    "l5x",
    "plcopen",
    "iecst",
    "plceye",
    "plcviz",
    "plcscl", "iec61131",    "iec61131",]

[profile.dev]
# Faster debug builds
opt-level = 0

[profile.test]
# Faster test builds - minimal optimization for speed
opt-level = 0

[profile.release]
# Fast release builds - no LTO, lower opt-level for faster compilation
lto = false
codegen-units = 16
panic = "abort"
opt-level = 2  # opt-level 2 is much faster than 3, still good performance
strip = true   # Remove debug symbols from binaries
# for samply
#debug = 1

# Optimized release profile for production (use with --profile release-lto)
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1
opt-level = 3

# Test builds in release mode should also be fast
[profile.bench]
inherits = "release"

# Speed up compilation of generated code in l5x and plcopen
[profile.dev.package.l5x]
opt-level = 0
debug = false

[profile.dev.package.plcopen]
opt-level = 0
debug = false

[profile.release.package.l5x]
opt-level = 1  # Lower optimization for faster compile, still decent runtime

[profile.release.package.plcopen]
opt-level = 1

[profile.release.package.plceye]
opt-level = 1  # Faster release builds for CLI tool

[profile.release.package.iecst]
opt-level = 1  # Parser doesn't need heavy optimization
