[package]
name = "iec61131"
version = "0.7.0"
edition = "2021"
description = "IEC 61131-3 Structured Text (ST) parser with static analysis"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/iec61131"
readme = "README.md"
keywords = ["plc", "iec61131", "parser", "structured-text", "automation"]
categories = ["parsing", "development-tools"]
rust-version = "1.70"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
