[package]
name = "iecst"
version = "0.4.0"
edition = "2021"
description = "IEC 61131-3 Structured Text parser for PLC programming"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/iecst"
readme = "README.md"
keywords = ["plc", "iec61131", "structured-text", "parser", "automation"]
categories = ["parsing", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
winnow = "0.7"
thiserror = "1.0"

[dev-dependencies]
walkdir = "2.5"
