[package]
name = "iectypes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "IEC 61131-3 data types, enums, and type definitions"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/iectypes"
readme = "README.md"
keywords = ["plc", "iec-61131", "automation", "industrial"]
categories = ["data-structures", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]

[dev-dependencies]
