[package]
name = "l5x"
version = "0.3.0"
edition = "2021"
description = "Tools for parsing and analyzing PLC software"
license = "MIT"

[dependencies]
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
winnow = "0.6"
iecst = { path = "../iecst" }
