[package]
name = "l5x"
version = "0.4.0"
edition = "2021"
description = "Parser for Rockwell Automation L5X files (Studio 5000 Logix Designer)"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/l5x"
readme = "README.md"
keywords = ["plc", "l5x", "rockwell", "allen-bradley", "ladder-logic"]
categories = ["parsing", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
winnow = "0.6"
iecst = { path = "../iecst", version = "0.4" }
thiserror = "1.0"

[dev-dependencies]
walkdir = "2.5"

