[package]
name = "plceye"
version = "0.1.0"
edition = "2021"
description = "PLC code smell detector for L5X files"
license = "MIT"

[dependencies]
l5x = { path = "../l5x" }
iecst = { path = "../iecst" }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "plceye"
path = "src/main.rs"
