[package]
name = "plceye"
version = "0.1.0"
edition = "2021"
description = "PLC code smell detector and static analyzer for L5X files"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/plceye"
readme = "README.md"
keywords = ["plc", "l5x", "static-analysis", "code-smell", "rockwell"]
categories = ["command-line-utilities", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
l5x = "0.3"
iecst = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "plceye"
path = "src/main.rs"
