[package]
name = "plceye"
version = "0.6.0"
edition = "2021"
description = "PLC code smell detector and static analyzer for L5X and PLCopen files"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://plceye.com"
documentation = "https://docs.rs/plceye"
readme = "README.md"
keywords = ["plc", "l5x", "plcopen", "static-analysis", "code-smell"]
categories = ["command-line-utilities", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
# Format parsers
l5x = { version = "0.5", path = "../l5x" }
plcopen = { version = "0.2", path = "../plcopen" }

# ST parsing
iecst = { version = "0.5", path = "../iecst" }

# Serialization
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config and CLI
toml = "0.8"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }

[[bin]]
name = "plceye"
path = "src/main.rs"
