[package]
name = "plcmodel"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
description = "Vendor-neutral PLC model for IEC 61131-3 programs"
license = "MIT"
repository = "https://github.com/radevgit/plc"
keywords = ["plc", "iec-61131", "automation", "industrial"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
iectypes = { path = "../iectypes" }
