[package]
name = "plcmodel"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Vendor-neutral PLC model for IEC 61131-3 programs"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/plcmodel"
readme = "README.md"
keywords = ["plc", "iec-61131", "automation", "industrial"]
categories = ["data-structures", "development-tools"]
authors = ["radevgit"]

[dependencies]
# Use path for workspace development, version for publishing
iectypes = { path = "../iectypes", version = "0.1" }
