[package]
name = "plcopen"
version = "0.1.1"
edition = "2021"
description = "Parser for PLCopen TC6 XML files (IEC 61131-3 standard exchange format)"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/plcopen"
readme = "README.md"
keywords = ["plc", "plcopen", "iec-61131", "automation", "xml"]
categories = ["parsing", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[features]
default = []
# Enable conversion to plcmodel
model = ["dep:plcmodel", "dep:iectypes"]

[dependencies]
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
iecst = "0.1"

# Optional deps for model feature
plcmodel = { version = "0.1", optional = true }
iectypes = { version = "0.1", optional = true }
