[package]
name = "plcopen"
version = "0.3.1"
edition = "2021"
description = "Parser for PLCopen TC6 XML files (IEC 61131-3 standard exchange format)"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/plcopen"
readme = "README.md"
keywords = ["plc", "plcopen", "iec-61131", "automation", "xml"]
categories = ["parsing", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0", features = ["derive"] }
iec61131 = { path = "../iec61131", version = "0.7" }
thiserror = "1.0"
