[package]
name = "plcscl"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Parser and AST for Siemens SCL (Structured Control Language)"
repository = "https://github.com/radevgit/plc"
keywords = ["plc", "scl", "siemens", "parser", "iec61131"]
categories = ["parser-implementations", "parsing"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
walkdir = "2.5.0"
