[package]
name = "plcviz"
version = "0.3.0"
edition = "2021"
description = "PLC code visualization - graphs, dependencies, and documentation"
license = "MIT"
repository = "https://github.com/radevgit/plc"
homepage = "https://github.com/radevgit/plc"
documentation = "https://docs.rs/plcviz"
readme = "README.md"
keywords = ["plc", "l5x", "visualization", "graph", "svg"]
categories = ["visualization", "development-tools"]
authors = ["radevgit"]
rust-version = "1.70"

[dependencies]
l5x = "0.5"
plcopen = { path = "../plcopen" }
iec61131 = { path = "../iec61131" }
layout-rs = "0.1"
regex = "1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
